[tool.poetry]
name = "spark"
version = "0.1.0"
description = "learning spark"
authors = ["oselio <oseliocandido@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
