[tool.poetry]
name = "spark"
version = "0.1.0"
description = "learning spark"
authors = ["oselio <oseliocandido@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
jupyter = "^1.0.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
